Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10561

"lfs mirror create -N --parent /path/file" does not inherit its parent's layout

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.11.0
    • Lustre 2.11.0
    • 3
    • 9223372036854775807

      # lfs getstripe -d /mnt/lustre/dir
      stripe_count:  2 stripe_size:   4194304 pattern:       raid0 stripe_offset: 1
      
      # lfs mirror create -N --parent /mnt/lustre/dir/file3
      
      # lfs getstripe /mnt/lustre/dir/file
      /mnt/lustre/dir/file
        lcm_layout_gen:    1
        lcm_mirror_count:  1
        lcm_entry_count:   1
          lcme_id:             1
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   EOF
            lmm_stripe_count:  1
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 2
            lmm_objects:
            - 0: { l_ost_idx: 2, l_fid: [0x100020000:0x4:0x0] }
      
      

      My thought about the inheritance is:

      • If parent is a plain directory, the "-N --parent" should create a mirror contains a single component covering [0, eof) and inherit its stripe options.
      • If parent is a PFL directory, newly created mirror should inherit the whole components of its parent directory.
      • If parent is a FLR directory, newly created mirror should inherit one of the mirror of its parent.

            yujian Jian Yu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: